# relkinema

./: AUTHORS  ChangeLog  Doxyfile  Makefile.in  README  about.cpp  about.h  about.ui  aboutcls.cpp  aboutcls.h  acinclude.m4  config.h.in  configure  configure.in  configure.in.in  index.html  kinemaPlot.cpp  kinemaPlot.h  kinemaPlot.ui  kinemaplotcls.cpp  kinemaplotcls.h  lineread.ui  linereadcls.cpp  linereadcls.h  main.cpp  mboxcls.cpp  mboxcls.h  mdmDlg.cpp  mdmDlg.h  mdmDlg.ui  mdmcls.cpp  mdmcls.h  message.cpp  message.h  message.ui  mkmassdata.f90  params.json  pix.h  rclist.ui  rclistcls.cpp  (+20 more)
admin/: libtool.m4.in
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
lib/: Makefile  rkcore.f90  rkcore.h  test_rkcore.c
po/: Makefile.in
src/: Makefile.am  Makefile.in  aboutcls.h  kinemaplotcls.h  lineread.ui  linereadcls.cpp  main.cpp  mboxcls.h  mdmDlg.ui  mdmcls.h  misc.h  rclist.ui  rclistcls.cpp  rclistcls.h  relkinema.desktop  relkinema.lsm  relkinemaCls.cpp  relkinemaCls.h  relkinemaDlg.ui  relkinemaui.rc  resultWindow.ui  resultwindowcls.h  rkCalcDlg.ui  rkCore.cpp  rkcalccls.h  rkcore.f90  rkcore.h  rwthreadcls.h
src/lib/: rkcore.f90
templates/: cpp
ucalc/: Makefile  ucalc.f90
